fixed oversized expanded card on mobile

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ a:focus {
 }
 
 .expanded {
-  max-width: 400px;
+  // max-width: 400px;
   max-height: 300px;
   height: 200px;
 }
@@ -185,9 +185,8 @@ a:focus {
   font-weight: 400;
   text-align: center;
   border: none;
-  word-wrap: break-word;
-  word-break: break-all;
-  max-height: 50px;
+  max-height: 4rem;
+  resize: none;
 }
 
 .add-new-button,
@@ -320,7 +319,7 @@ select {
 #new-bookmark-title,
 #new-bookmark-url,
 #new-bookmark-description {
-  min-width: 250px;
+  // min-width: 250px;
 }
 
 .rating-input {
@@ -374,7 +373,7 @@ input[type='number']::-webkit-outer-spin-button {
 
 .bookmark.expanded {
   flex-direction: column;
-  max-width: 400px;
+  // max-width: 400px;
   margin: 0 auto 1rem;
 }
 
@@ -458,16 +457,6 @@ option:checked {
   display: none;
 }
 
-// .ratinglabel {
-//   display: inline-block;
-//   width: 50px;
-//   height: 50px;
-//   text-align: center;
-//   border: 1px solid #222;
-//   line-height: 50px;
-//   cursor: pointer
-// }
-
 /* ERROR SELECTORS */
 
 .error-message {
@@ -500,7 +489,7 @@ option:checked {
     transform: translate(-50%, -50%);
   }
 
-  textarea {
+  #new-bookmark-description {
     position: relative;
     top: 3.5rem;
     left: 50%;
@@ -535,6 +524,10 @@ option:checked {
     min-width: 180px;
     max-width: 80%;
     font-size: 14px;
+  }
+
+  .bookmark.expanded {
+    max-width: 50%;
   }
 
   .bookmark-rating {
@@ -576,6 +569,23 @@ option:checked {
     text-align: center;
     width: 285px;
     max-width: 100%;
+  }
+}
+
+@media (min-width: 540px) and (max-width: 590px) {
+  .add-new-button,
+  #filter-dropdown {
+    padding: 0.6rem 1.2rem;
+    margin-bottom: 0;
+  }
+
+  .bookmark-title {
+    text-align: left;
+    margin: 0 auto 0 0;
+  }
+
+  .description-edit {
+    padding-top: 1rem;
   }
 }
 
@@ -627,24 +637,20 @@ option:checked {
   }
 
   .expanded {
-    height: 160px;
-  }
-}
-
-@media (min-width: 540px) and (max-width: 590px) {
-  .add-new-button,
-  #filter-dropdown {
-    padding: 0.6rem 1.2rem;
-    margin-bottom: 0;
+    max-height: 200px;
   }
 
-  .bookmark-title {
-    text-align: left;
-    margin: 0 auto 0 0;
+  .bookmark.expanded a {
+    padding: 1rem;
   }
 
-  .bookmark {
-    min-width: 350px;
+  .description-edit {
+    padding: 1rem 0;
+    height: 3rem;
+  }
+
+  input[size='40'] {
+    max-width: 100px;
   }
 }
 
